export interface IdProvider {
    getId(): string;
}
