export interface Material {
    id: string;
    title: string;
    content: string;
}
